# Computer_vision_Task3

./: .gitignore  README.md
Backend/: CMakeLists.txt  main.cpp  run.bat  run2.bat
Backend/include/: httplib.h
Backend/operations/: harris.cpp  harris.h  image_utils.cpp  image_utils.h  lambda.cpp  lambda.h  matcher.cpp  matcher.h  matching.h  sift.cpp  sift.h  utils.cpp  utils.h
Frontend/: index.html  operations.html
Frontend/assets/css/: main.css  operation.css
Frontend/assets/js/: operation.js
